--- a/css/style.css
+++ b/css/style.css
@@ -365,6 +365,13 @@ footer {
 }
 
 
+/* BONUS */
+/* .section-body .card-container:nth-child(n+3) {
+   display: none;
+} */
+/* BONUS */
+
+
 /* MEDIA SCREENS */
 @media screen and (max-width: 500px) {
 
@@ -402,7 +409,6 @@ footer {
 /* small */
 @media screen and (min-width: 576px)
  {
-
    .main-content {
       width: calc(100% - 232px);
    }
@@ -488,10 +494,6 @@ footer {
       padding-bottom: 5px;
    }
 
-
-
-
-
    .playlist-list li a,
    .search-list li a {
       color: #6E6E6E;
@@ -536,6 +538,15 @@ footer {
       width: calc(25% - 10px);
    }
 
+   /* BONUS */
+   /* .section-body .card-container:nth-child(n+3) {
+      display: block;
+   }
+   .section-body .card-container:nth-child(n+5) {
+      display: none;
+   } */
+   /* BONUS */
+
    .display-song__icons {
       flex-direction: row;
       align-items: center;
@@ -553,6 +564,13 @@ footer {
    .card-container {
       width: calc(100% / 6 - 10px);
    }
+
+   /* BONUS */
+   /* .section-body .card-container:nth-child(n+5) {
+      display: block;
+   } */
+   /* BONUS */
+
    .card-container img {
       max-width: 200px;
    }
